syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "./pb";

service AuthenticationService {
    rpc UserRegister (RegisterRequest) returns (RegisterResponse);
    rpc UserLogin (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string confirm_password = 4;
}

message RegisterResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string jwt_token = 1;
}